Add manual uploading of Lumia JSONs

--- a/settings.html
+++ b/settings.html
@@ -14,6 +14,11 @@
                     <input type="text" id="lumia-url-input" class="text_pole" placeholder="Enter World Book URL (JSON)" />
                     <button id="lumia-fetch-btn" class="menu_button">Fetch</button>
                 </div>
+                <div style="text-align: center; margin: 10px 0;">- OR -</div>
+                <div class="lumia-input-group" style="justify-content: center;">
+                    <button id="lumia-upload-btn" class="menu_button">Upload JSON File</button>
+                    <input type="file" id="lumia-file-input" accept=".json" style="display: none;" />
+                </div>
             </div>
 
             <!-- Configuration Section -->
