Update settings panels for definitions

--- a/settings.html
+++ b/settings.html
@@ -26,8 +26,9 @@
                 <h3>Configuration</h3>
                 
                 <h4>Definitions (Select One)</h4>
-                <div id="lumia-list-definitions" class="lumia-list">
-                    <div class="lumia-empty">No definitions found</div>
+                <div class="lumia-definition-selector">
+                    <div id="lumia-current-definition">No definition selected</div>
+                    <button id="lumia-open-definitions-btn" class="menu_button">Select Definition</button>
                 </div>
 
                 <h4>Behaviors (Select Multiple)</h4>
