Combined next OOC and OOC trigger for dynamic prompting

--- a/settings.html
+++ b/settings.html
@@ -92,8 +92,7 @@
                 <h4>Message Tracking & OOC Macros</h4>
                 <ul>
                     <li><code>{{lumiaMessageCount}}</code> - Current message count in the chat.</li>
-                    <li><code>{{lumiaOOCTrigger}}</code> - Injects OOC instruction when interval is reached (configure in Misc Features).</li>
-                    <li><code>{{lumiaNextOOC}}</code> - Shows how many messages until next OOC trigger.</li>
+                    <li><code>{{lumiaOOCTrigger}}</code> - Shows countdown to next OOC trigger, or injects OOC instruction when interval is reached (configure in Misc Features).</li>
                 </ul>
             </div>
 
