--- a/settings.html
+++ b/settings.html
@@ -164,6 +164,13 @@
                             </svg>
                             <span>Summarization</span>
                         </button>
+                        <button id="lumia-open-prompt-settings-btn" class="lumia-tool-btn">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path>
+                                <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path>
+                            </svg>
+                            <span>Prompt Settings</span>
+                        </button>
                     </div>
                 </div>
             </div>
@@ -223,6 +230,12 @@
                             <div class="lumia-macro"><code>{{loomSummary}}</code><span>Stored summary</span></div>
                             <div class="lumia-macro"><code>{{loomSummaryPrompt}}</code><span>Summary directive</span></div>
                             <div class="lumia-macro"><code>/loom-summarize</code><span>Manual trigger</span></div>
+                        </div>
+                    </div>
+                    <div class="lumia-macro-group">
+                        <div class="lumia-macro-group-title">Sovereign Hand</div>
+                        <div class="lumia-macro-list">
+                            <div class="lumia-macro"><code>{{loomLastUserMessage}}</code><span>Last user message (excluded from context)</span></div>
                         </div>
                     </div>
                 </div>
