Saving our oh-glorious Lando from an eyesore

--- a/settings.html
+++ b/settings.html
@@ -197,7 +197,7 @@
             <div class="lumia-selector">
               <div class="lumia-selector-header">
                 <span class="lumia-selector-label">Narrative Style</span>
-                <span class="lumia-selector-hint">Select One</span>
+                <span class="lumia-selector-hint">Select Multiple</span>
               </div>
               <div class="lumia-selector-row">
                 <div class="lumia-selector-value" id="loom-current-style">
